--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@emailjs/nodejs": "^5.0.2",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "emailjs-com": "^3.2.0",
